2014-07-22  Raphael Moreira Zinsly  <rzinsly@linux.vnet.ibm.com>

	* include/get_digits.h : Added definitions for the number of digits in
	strings with _Decimal32|63|128.
	* sysdeps/bid/bid-private.c (__get_digits_d128): Changed to use the
	number of digits definition.
	* sysdeps/bid/numdigit.h (numdigitsd128): Fixed the lenght of the
	string with the digits and started to use the number of digits
	definition.
	(numdigitsd64): Changed to use the number of digits definition.
	(numdigitsd32): Likewise.
	(left_justifyd32): Likewise.
	(left_justifyd64): Likewise.
	(left_justifyd128): Likewise.
	* sysdeps/dpd/numdigits.h (numdigits): Changed to use the number of
	digits definition.
	(left_justify): Likewise.

2014-06-13  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/soft-dfp/dpd/numdigits.h (left_justify): Fix NaN1 mask
	definition little endian and a compiler warning for memset being
	called with 0 size.

	* tests/scaffold.c (buf): Increase size to 1024 to avoid potentially
	buffer overflows in tests.

	* sysdeps/bid/symbol-hacks.h: Add __bid_ne[d|s|t]d2 symbols alias.

2014-06-13  Raphael Moreira Zinsly  <rzinsly@linux.vnet.ibm.com>

	* sysdeps/bid/bid-private.c (__get_digits_d32): Fix to handle NaN.
	(__get_digits_d64): Likewise.
	(__get_digits_d128): Likewise.
	* sysdeps/soft-dfp/bid/numdigits.h (left_justifyd32): Likewise.
	(left_justifyd64): Likewise.
	(left_justifyd128): Likewise.

2014-06-13  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* libdecnumber/decNumber.c (decGetInt): Fix compiler warning where an
	array is potentially accessed out of the bounds.

2014-06-13  Raphael Moreira Zinsly  <rzinsly@linux.vnet.ibm.com>

	* sysdeps/soft-dfp/dpd/numdigits.h (left_justifyd32): Fix to handle
	NaN.
	(left_justifyd64): Likewise.
	(left_justifyd128): Likewise.
	* tests/test-left_justify.c: Add tests to verify bit limits.

2014-06-05  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>
